--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,13 @@ hr{
 	margin-left: -30px;
 	margin-top: 10px;
 }
+a{
+	text-decoration: none;
+	color: #57A3D7;
+}
+a:hover{
+	color: #649BB0;
+}
 .wrap{
 	background-color: #f5f5f5;
 	margin: auto;
@@ -53,3 +60,4 @@ hr{
 	font-size: 14px;
 	padding: 2px 6px;
 }
+
